<resources>
    <string name="app_name">CQUPT教务在线</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_clear_cache">清除缓存</string>
    <string name="action_download_attachment">下载附件</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_training_plan">培养方案</string>
    <string name="title_activity_student_info">学籍信息</string>

    <!-- Strings related to login -->
    <string name="prompt_stu_num">学号</string>
    <string name="prompt_password">身份证后六位</string>
    <string name="prompt_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_field_required">This field is required</string>

    <string-array name="titles_weeks">
        <item>整学期</item>
        <item>第一周</item>
        <item>第二周</item>
        <item>第三周</item>
        <item>第四周</item>
        <item>第五周</item>
        <item>第六周</item>
        <item>第七周</item>
        <item>第八周</item>
        <item>第九周</item>
        <item>第十周</item>
        <item>第十一周</item>
        <item>第十二周</item>
        <item>第十三周</item>
        <item>第十四周</item>
        <item>第十五周</item>
        <item>第十六周</item>
        <item>第十七周</item>
        <item>第十八周</item>
    </string-array>

    <string-array name="schedule_weekday">
        <item>星期一</item>
        <item>星期二 </item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

    <string-array name="course_weekdays">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>七</item>
    </string-array>

    <string-array name="schedule_time">
        <item>8:00 ~ 9:40  am</item>
        <item>10:05 ~ 11:45  am</item>
        <item>2:00 ~ 3:40  pm</item>
        <item>4:05 ~ 5:45  pm</item>
        <item>7:00 ~ 8:40  pm</item>
        <item>8:50 ~ 10:30  pm</item>
    </string-array>

</resources>
